Made the logic work as intended, Need to work on visuals and if user money == 0 or if bet will put them in negatives

--- a/todo
+++ b/todo
@@ -1,5 +1,7 @@
 Create deck - DONE
 Make shuffle - DONE
 Make hand, including hit and stay - DONE
-Make dealer hand
-Make winning, push, and loss
+Make dealer hand - DONE
+Make winning, push, and loss - TBD
+
+WORK ON VISUALS
