worked a bit on the frame and tested some stuff - jacob

--- a/todo
+++ b/todo
@@ -2,6 +2,11 @@ Create deck - DONE
 Make shuffle - DONE
 Make hand, including hit and stay - DONE
 Make dealer hand - DONE
-Make winning, push, and loss - TBD
+Make winning, push, and loss - DONE
+Make double down and make "5 card charlie"
 
 WORK ON VISUALS
+get a button that works
+get the game to work in Swing
+get the game to show cards
+get buttons to work
